fixing h1 size, updating padding on main and recipe descriptions for more accurate spacing

--- a/style.css
+++ b/style.css
@@ -26,15 +26,14 @@ main {
     background-color: hsl(0, 0%, 100%);
     display: flex;
     flex-direction: column;
-    max-width: 50%;
-    border-radius: 20px;
-    padding: 3%;
+    padding: 2%;
     margin: 8% auto;
 }
 
 img {
     max-width: 100%;
     max-height: 100%;
+    padding: 10px;
 }
 
 h1 {
@@ -43,7 +42,12 @@ h1 {
     font-weight: 400;
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 36px;
+    font-size: 40px;
+}
+
+.recipe-description {
+    padding-top: 0;
+    padding-bottom: 10px;
 }
 
 .preparation-time {
@@ -67,6 +71,7 @@ h3 {
     color: hsl(14, 45%, 36%);
     font-size: 26px;
     line-height: 12px;
+    font-weight: 400;
 }
 
 hr {
@@ -145,7 +150,7 @@ tr + tr {
         max-width: 45%;
         margin: auto;
         border-radius: 20px;
-        padding: 3% 3% 2%;
+        padding: 2%;
         margin-top: 8%;
         margin-bottom: 8%;
     }
